--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,2 @@
-# Authors
-
-Keegan Joubert: keeganjoubert@protonmail.com
-Temo Percy Goitsione Khumo Maphologela: 
+Keegan Joubert
+Temo Percy Goitsione Khumo Maphologela 
