--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
 Keegan Joubert <keeganjoubert@protonmail.com>
-Temo Percy Goitsione Khumo Maphologela 
+Temo Percy Goitsione Khumo Maphologela <temotech25@gmail.com> 
